// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Factory  > Factory will create instance and collect metadata 1`] = `
[
  {
    "addons": [],
    "controller": "http",
    "ctxs": [
      "context",
    ],
    "define": {},
    "filter": undefined,
    "guards": [],
    "http": {
      "method": "get",
      "prefix": "/base",
      "route": "/test",
    },
    "meta": {
      "http": {
        "method": "get",
        "route": "/test",
      },
    },
    "method": "test",
    "name": "A",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "meta": {
          "key": "id",
          "type": "query",
        },
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "meta": {
          "key": "name",
          "type": "body",
        },
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "A",
  },
]
`;

exports[`Factory  > In extended case 1`] = `
[
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "guards": [],
    "http": {
      "method": "get",
      "prefix": "/B",
      "route": "/testB",
    },
    "meta": {
      "http": {
        "method": "get",
        "route": "/testB",
      },
    },
    "method": "test2",
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "meta": {
          "key": "id",
          "type": "query",
        },
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "meta": {
          "key": "name",
          "type": "body",
        },
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "B",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "guards": [],
    "http": {
      "method": "get",
      "prefix": "/B",
      "route": "/testA",
    },
    "meta": {
      "http": {
        "method": "get",
        "route": "/testA",
      },
    },
    "method": "test",
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "meta": {
          "key": "id",
          "type": "query",
        },
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "meta": {
          "key": "name",
          "type": "body",
        },
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "B",
  },
]
`;

exports[`Factory  > decorator in extends case 1`] = `
[
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "guards": [
      "A",
      "test",
    ],
    "http": {
      "method": "post",
      "prefix": "",
      "route": "",
    },
    "meta": {
      "guards": [
        "test",
      ],
      "http": {
        "method": "post",
        "route": "",
      },
    },
    "method": "test",
    "name": "A",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "",
        "meta": {
          "key": "",
          "type": "body",
        },
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "A",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {
      "class": "b",
      "method": "b",
    },
    "filter": undefined,
    "guards": [
      "A",
      "test",
      "test3",
      "test2",
    ],
    "http": {
      "headers": {
        "b": "b",
        "key": "b",
      },
      "method": "post",
      "prefix": "",
      "route": "",
    },
    "meta": {
      "define": {
        "method": "b",
      },
      "guards": [
        "test",
        "test3",
        "test2",
      ],
      "http": {
        "headers": {
          "b": "b",
          "key": "b",
        },
        "method": "post",
        "route": "",
      },
      "params": [
        {
          "define": {
            "b": "b",
          },
          "index": 0,
        },
      ],
    },
    "method": "test",
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "",
        "meta": {
          "key": "",
          "type": "body",
        },
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "B",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {
      "class": "c",
      "method": "c",
    },
    "filter": undefined,
    "guards": [
      "A",
      "test3",
      "test2",
      "test",
    ],
    "http": {
      "headers": {
        "b": "b",
        "c": "c",
        "key": "c",
      },
      "method": "post",
      "prefix": "",
      "route": "/test",
    },
    "meta": {
      "define": {
        "method": "c",
      },
      "guards": [
        "test3",
        "test2",
        "test",
      ],
      "http": {
        "headers": {
          "b": "b",
          "c": "c",
          "key": "c",
        },
        "method": "post",
        "route": "/test",
      },
      "params": [
        {
          "define": {
            "b": "b",
          },
          "index": 0,
        },
        {
          "define": {
            "c": "c",
          },
          "index": 0,
        },
      ],
    },
    "method": "test",
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "",
        "meta": {
          "key": "",
          "pipe": "C",
          "type": "body",
        },
        "pipe": "C",
        "type": "body",
      },
    ],
    "tag": "C",
  },
]
`;

exports[`Factory  > multple class extends the same class 1`] = `
[
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "guards": [],
    "http": {
      "method": "get",
      "prefix": "/B",
      "route": "/testB",
    },
    "meta": {
      "http": {
        "method": "get",
        "route": "/testB",
      },
    },
    "method": "test2",
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "meta": {
          "key": "id",
          "type": "query",
        },
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "meta": {
          "key": "name",
          "type": "body",
        },
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "B",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "guards": [],
    "http": {
      "method": "get",
      "prefix": "/B",
      "route": "/testA",
    },
    "meta": {
      "http": {
        "method": "get",
        "route": "/testA",
      },
    },
    "method": "test",
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "meta": {
          "key": "id",
          "type": "query",
        },
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "meta": {
          "key": "name",
          "type": "body",
        },
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "B",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "guards": [],
    "http": {
      "method": "get",
      "prefix": "/C",
      "route": "/testC",
    },
    "meta": {
      "http": {
        "method": "get",
        "route": "/testC",
      },
    },
    "method": "test3",
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "meta": {
          "key": "id",
          "type": "query",
        },
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "meta": {
          "key": "name",
          "type": "body",
        },
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "C",
  },
  {
    "addons": [],
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "guards": [],
    "http": {
      "method": "get",
      "prefix": "/C",
      "route": "/testA",
    },
    "meta": {
      "http": {
        "method": "get",
        "route": "/testA",
      },
    },
    "method": "test",
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "meta": {
          "key": "id",
          "type": "query",
        },
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "meta": {
          "key": "name",
          "type": "body",
        },
        "pipe": undefined,
        "type": "body",
      },
    ],
    "tag": "C",
  },
]
`;
